fix leetcode no.89